--- a/src/main/resources/templates/allProjects.html
+++ b/src/main/resources/templates/allProjects.html
@@ -175,7 +175,7 @@
                                     <p class="text-left" th:text="'Proje Türü: ' + ${project.projeTuru}"></p>
                                     <p class="text-left" th:text="'Proje Durumu: ' + ${project.projeDurumu}"></p>
                                     <p class="text-left" th:text="'Alan Bilgisi ' + ${project.alanBilgisi}"></p>
-                                    <p class="text-left" th:text="'Yıl: ' + ${project.projeYil}"></p>
+                                    <p class="text-left" th:text="'Yıl: ' + ${project.yil}"></p>
                                     <p class="text-left" th:text="'Proje Bütçesi: ' + ${project.projeButcesi}"></p>
                                     <p class="text-left" th:text="'Para Birimi: ' + ${project.paraBirimi}"></p>
                                     <p class="text-left" th:text="'Araştırmacı Sayısı: ' + ${project.arastirmaciSayisi}"></p>
