--- a/src/main/resources/templates/addArticle.html
+++ b/src/main/resources/templates/addArticle.html
@@ -81,9 +81,15 @@
         <div class="form-group">
             <label for="uluslararasiYayin" class="col-sm-2 control-label">Uluslararası Yayın</label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="uluslararasiYayin">
-                <label class="form-check-label" for="uluslararasiYayin">
-                </label>
+                <input class="form-check-input" type="checkbox" id="uluslararasiYayin" name="uluslararasiYayin">
+                <label class="form-check-label" for="uluslararasiYayin"></label>
+                <script>
+                    $(document).ready(function () {
+                        $('#uluslararasiYayin').on('change', function () {
+                            $('input[name="uluslararasiYayin"]').val($(this).is(':checked') ? 'true' : 'false');
+                        });
+                    });
+                </script>
             </div>
         </div>
         <div class="form-group">
@@ -99,9 +105,15 @@
         <div class="form-group">
             <label for="uluslararasiIsbirlikli" class="col-sm-2 control-label">Uluslararası İşbirlikli Yayın</label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="uluslararasiIsbirlikli">
-                <label class="form-check-label" for="uluslararasiIsbirlikli">
-                </label>
+                <input class="form-check-input" type="checkbox" id="uluslararasiIsbirlikli" name="uluslararasiIsbirlikli">
+                <label class="form-check-label" for="uluslararasiIsbirlikli"></label>
+                <script>
+                    $(document).ready(function () {
+                        $('#uluslararasiIsbirlikli').on('change', function () {
+                            $('input[name="uluslararasiIsbirlikli"]').val($(this).is(':checked') ? 'true' : 'false');
+                        });
+                    });
+                </script>
             </div>
         </div>
         <div class="form-group">
@@ -153,17 +165,29 @@
         <div class="form-group">
             <label for="bap" class="col-sm-2 control-label">BAP Projesinden Üretilen Yayın</label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="bap">
-                <label class="form-check-label" for="bap">
-                </label>
+                <input class="form-check-input" type="checkbox" id="bap" name="bap">
+                <label class="form-check-label" for="bap"></label>
+                <script>
+                    $(document).ready(function () {
+                        $('#bap').on('change', function () {
+                            $('input[name="bap"]').val($(this).is(':checked') ? 'true' : 'false');
+                        });
+                    });
+                </script>
             </div>
         </div>
         <div class="form-group">
             <label for="kurumDisiYazar" class="col-sm-2 control-label">Kurum Dışı Ortak Yazarlı</label>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="kurumDisiYazar">
-                <label class="form-check-label" for="kurumDisiYazar">
-                </label>
+                <input class="form-check-input" type="checkbox" id="kurumDisiYazar" name="kurumDisiYazar">
+                <label class="form-check-label" for="kurumDisiYazar"></label>
+                <script>
+                    $(document).ready(function () {
+                        $('#kurumDisiYazar').on('change', function () {
+                            $('input[name="kurumDisiYazar"]').val($(this).is(':checked') ? 'true' : 'false');
+                        });
+                    });
+                </script>
             </div>
         </div>
         <div class="form-group">
