--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -283,12 +283,16 @@
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil
                         </button>
                     </form>-->
-                    <div class="text-center">
-                        <!-- Button HTML (to Trigger Modal) -->
-                        <a href="#myModal" class="btn btn-danger" data-toggle="modal"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil</a>
-                    </div>
+
+                    <!--<div class="text-center">
+                        &lt;!&ndash; Button HTML (to Trigger Modal) &ndash;&gt;
+                        <a href="#deleteModal" class="btn btn-danger" data-toggle="modal"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil</a>
+                    </div>-->
+                    <a class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"
+                       th:attr="data-target= '#deleteModal' + ${article.makaleId}">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil</a>
                     <!-- Modal HTML -->
-                    <div id="myModal" class="modal fade">
+                    <div th:id="deleteModal + ${article.makaleId}" class="modal fade">
                         <div class="modal-dialog modal-confirm">
                             <div class="modal-content">
                                 <div class="modal-header flex-column">
@@ -302,12 +306,18 @@
                                     <p>Bu makaleyi silmek istediğinize emin misiniz?</p>
                                 </div>
                                 <div class="modal-footer justify-content-center">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal et</button>
-                                    <button type="button" class="btn btn-danger">Sil</button>
+                                    <!--<button type="button" class="btn btn-danger" >Sil</button>-->
+                                    <form th:action="'/article/delete/'+ ${article.makaleId}" th:method="post">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal et</button>
+                                        <button class="btn btn-danger" type="submit">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil
+                                        </button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </td>
             </tr>
             </tbody>
@@ -364,7 +374,7 @@
                                     <p class="text-left" th:text="'Proje Türü: ' + ${project.projeTuru}"></p>
                                     <p class="text-left" th:text="'Proje Durumu: ' + ${project.projeDurumu}"></p>
                                     <p class="text-left" th:text="'Alan Bilgisi ' + ${project.alanBilgisi}"></p>
-                                    <p class="text-left" th:text="'Yıl: ' + ${project.projeYil}"></p>
+                                    <p class="text-left" th:text="'Yıl: ' + ${project.yil}"></p>
                                     <p class="text-left" th:text="'Proje Bütçesi: ' + ${project.projeButcesi}"></p>
                                     <p class="text-left" th:text="'Para Birimi: ' + ${project.paraBirimi}"></p>
                                     <p class="text-left" th:text="'Araştırmacı Sayısı: ' + ${project.arastirmaciSayisi}"></p>
@@ -389,12 +399,16 @@
                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil
                         </button>
                     </form>-->
-                    <div class="text-center">
-                        <!-- Button HTML (to Trigger Modal) -->
+                    <!--<div class="text-center">
+                        &lt;!&ndash; Button HTML (to Trigger Modal) &ndash;&gt;
                         <a href="#myModal2" class="btn btn-danger" data-toggle="modal"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil</a>
-                    </div>
+                    </div>-->
+
+                    <a class="btn btn-danger" data-toggle="modal" data-target="#myModal2"
+                       th:attr="data-target= '#deleteModal' + ${project.projeId}">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil</a>
                     <!-- Modal HTML -->
-                    <div id="myModal2" class="modal fade">
+                    <div th:id="deleteModal + ${project.projeId}" class="modal fade">
                         <div class="modal-dialog modal-confirm">
                             <div class="modal-content">
                                 <div class="modal-header flex-column">
@@ -408,8 +422,15 @@
                                     <p>Bu projeyi silmek istediğinize emin misiniz?</p>
                                 </div>
                                 <div class="modal-footer justify-content-center">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal et</button>
-                                    <button type="button" class="btn btn-danger" th:action="'/article/delete/'+ ${project.projeId}" th:method="post">Sil</button>
+                                    <!--<button type="button" class="btn btn-danger" th:href="@{'/project/delete/' + ${project.projeId}}" th:method="post">Sil</button>-->
+                                    <form th:action="'/project/delete/' + ${project.projeId} " th:method="post">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">İptal et
+                                        </button>
+                                        <button class="btn btn-danger" type="submit">
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Sil
+                                        </button>
+                                    </form>
+
                                 </div>
                             </div>
                         </div>
