--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -35,13 +35,14 @@
              th:src="@{/images/arved_logo.png}">
     </div>
 </nav>
+<nav class="navbar navbar-light" style="width: 500px; margin: auto">
+</nav>
 <nav class="navbar navbar-light" style="width: 600px; margin: auto">
     <div class="alert alert-info" role="alert" th:text="${success}" th:if="${success}"></div>
     <div class="alert alert-danger" role="alert" th:text="${error}" th:if="${error}"></div>
 </nav>
-<nav class="navbar navbar-light" style="width: 500px; margin: auto">
-</nav>
-<main class="container" style="width: 600px; height:400px; border: 1px ridge #cecece">
+
+<main class="container" style="width: 600px; height:430px; border: 1px ridge #cecece">
     <form th:action="@{/registration}" method="post" style="width: 500px; margin: auto">
         <h3 style="margin-left: 190px">Kayıt Ol</h3>
         <!--<div class="form-group">
@@ -97,6 +98,9 @@
                         class="btn btn-default">Kayıt Ol
                 </button>
             </div>
+        </div>
+        <div>
+            <p class="text-center"><a href="/login">Back to login</a></p>
         </div>
     </form>
 </main>
